--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@tailwindcss/vite": "^4.1.7",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.8.2",
+        "apexcharts": "^4.7.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
@@ -35,6 +36,8 @@
         "typescript": "^5.2.2",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
+        "vue-sonner": "^2.0.0",
+        "vue3-apexcharts": "^1.8.0",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
