--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "vue": "^3.5.13",
         "vue-sonner": "^2.0.0",
         "vue3-apexcharts": "^1.8.0",
+        "vuedraggable": "^4.1.0",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
